# imap_migrate

./: .gitignore  CHANGELOG.md  README.md  config.yaml.example  imap_migrate.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  meta.yaml
imap_migrate/: __init__.py  __main__.py  cli.py  colors.py  config.py  constants.py  exceptions.py  folders.py  imap_ops.py  logging_setup.py  migrator.py  state.py  util.py
tests/: test_config.py  test_folders.py  test_imap_ops_fetch.py  test_list_folders.py  test_state_roundtrip.py
